src/main/java/com/example/gitrepoexplorer/infrastructure/error/dto/UnsupportedMediaTypeErrorDto.java
package com.example.gitrepoexplorer.infrastructure.error.dto;

public record UnsupportedMediaTypeErrorDto(int status, String message) {
}
